--- a/src/pages/floor/floor.html
+++ b/src/pages/floor/floor.html
@@ -3,9 +3,10 @@
         <ion-title>ชั้นจอดรถ</ion-title>
     </ion-navbar>
 </ion-header>
-<ion-content>
-    <ion-list>
-        <ion-item *ngFor="let item of floor">
+<ion-content padding>
+    <div text-center *ngIf="loading">กำลังโหลด...</div>
+    <ion-list *ngIf="floor.length>0">
+        <ion-item *ngFor="let item of floor" no-padding>
             <ion-thumbnail item-start>
                 <img src="{{ item.floor_img }}">
             </ion-thumbnail>
@@ -15,4 +16,5 @@
             <button ion-button clear item-end (click)="open(item)">เปิดดู</button>
         </ion-item>
     </ion-list>
+    <div text-center *ngIf="!loading && floor.length==0">ไม่พบประวัติการ Check In ของคุณ</div>
 </ion-content>
