--- a/src/pages/edit-profile/edit-profile.html
+++ b/src/pages/edit-profile/edit-profile.html
@@ -4,5 +4,29 @@
     </ion-navbar>
 </ion-header>
 <ion-content padding>
-    <div text-center>กำลังปรับปรุง</div>
+    <ion-list>
+        <ion-item>
+            <ion-icon name='card' item-start></ion-icon>
+            <ion-label floating>ชื่อ</ion-label>
+            <ion-input type="text" [(ngModel)]="user.user_name"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-icon name='contact' item-start></ion-icon>
+            <ion-label floating>นามสกุล</ion-label>
+            <ion-input type="text" [(ngModel)]="user.user_lname"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-icon name='call' item-start></ion-icon>
+            <ion-label floating>เบอร์โทร</ion-label>
+            <ion-input type="text" [(ngModel)]="user.phone"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-icon name='mail' item-start></ion-icon>
+            <ion-label floating>อีเมลล์</ion-label>
+            <ion-input type="text" [(ngModel)]="user.email"></ion-input>
+        </ion-item>
+    </ion-list>
+    <button ion-button full color="dark" icon-start (click)="edit()">
+        <ion-icon name="create"></ion-icon> ยืนยันการแก้ไข
+    </button>
 </ion-content>
