--- a/src/pages/floor/floor.html
+++ b/src/pages/floor/floor.html
@@ -16,5 +16,5 @@
             <button ion-button clear item-end (click)="open(item)">เปิดดู</button>
         </ion-item>
     </ion-list>
-    <div text-center *ngIf="!loading && floor.length==0">ไม่พบประวัติการ Check In ของคุณ</div>
+    <div text-center *ngIf="!loading && floor.length==0">ไม่พบข้อมูลชั้นที่จอดรถ</div>
 </ion-content>
