--- a/src/pages/parking/parking.html
+++ b/src/pages/parking/parking.html
@@ -27,5 +27,5 @@
             </ion-note>
         </ion-item>
     </ion-list>
-    <div text-center *ngIf="!loading && parking.length==0">ไม่พบประวัติการ Check In ของคุณ</div>
+    <div text-center *ngIf="!loading && parking.length==0">ไม่พบข้อมูลที่จอดรถ</div>
 </ion-content>
