--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,21 +1,27 @@
 <ion-content padding>
-    <ion-card>
-        <img src="assets/imgs/user.png" />
-    </ion-card>
+    <div class="logo">
+        <img src="assets/imgs/logo.png" />
+    </div>
+    <h2 class="title">SMART PARKING</h2>
     <ion-list>
         <ion-item>
+            <ion-icon name='mail' item-start></ion-icon>
             <ion-label floating>อีเมลล์</ion-label>
             <ion-input type="text" [(ngModel)]="auth.email"></ion-input>
         </ion-item>
         <ion-item>
+            <ion-icon name='key' item-start></ion-icon>
             <ion-label floating>รหัสผ่าน</ion-label>
             <ion-input type="password" [(ngModel)]="auth.password"></ion-input>
         </ion-item>
     </ion-list>
-    <button ion-button block icon-start (click)="login()">
+    <button ion-button block icon-start large (click)="login()">
         <ion-icon name="log-in"></ion-icon> เข้าสู่ระบบ
     </button>
     <button ion-button block color="dark" icon-start (click)="register()">
         <ion-icon name="add"></ion-icon> ลงทะเบียน
+    </button>
+    <button ion-button block color="light" icon-start (click)="forgot()">
+        <ion-icon name="help"></ion-icon> ลืมรหัสผ่าน ?
     </button>
 </ion-content>
