--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,5 @@
 <ion-tabs color="info">
     <ion-tab tabIcon="home" [root]="tab1" tabTitle="หน้าแรก"></ion-tab>
-    <ion-tab tabIcon="contact" [root]="tab2" tabTitle="โปรไฟล์"></ion-tab>
+    <ion-tab tabIcon="help" [root]="tab2" tabTitle="เงือนไข"></ion-tab>
+    <ion-tab tabIcon="contact" [root]="tab3" tabTitle="โปรไฟล์"></ion-tab>
 </ion-tabs>`
