--- a/src/pages/forgot/forgot.html
+++ b/src/pages/forgot/forgot.html
@@ -11,7 +11,7 @@
             <ion-input type="text" [(ngModel)]="auth.email"></ion-input>
         </ion-item>
     </ion-list>
-    <button ion-button block icon-start (click)="submit()">
+    <button ion-button block icon-start (click)="send()">
         <ion-icon name="mail"></ion-icon> ส่งรหัสผ่าน
     </button>
 </ion-content>
