--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -1,22 +1,27 @@
 <ion-header>
     <ion-navbar color="info">
-        <ion-title>history</ion-title>
+        <ion-title>ประวัติการ CHECK IN</ion-title>
     </ion-navbar>
 </ion-header>
-<ion-content padding>
+<ion-content>
     <div text-center *ngIf="loading">กำลังโหลด...</div>
     <ion-list *ngIf="data.length>0">
         <ion-item *ngFor="let item of data" (click)="open(item)">
-            <h2>{{ item.checkin_id }}</h2>
-            <p>Check In : {{ item.datetime1 }}</p>
-            <p>Check Out :
+            <p>วัน-เวลา เข้า : {{ item.datetime1 }}</p>
+            <p>วัน-เวลา ออก :
                 <span *ngIf="item.status=='N'">{{ item.datetime2 }}</span>
                 <span class="text-secondary" *ngIf="item.status=='Y'">กำลัง Check In</span>
             </p>
             <ion-note item-end>
-                <span class="text-danger" *ngIf="item.status=='Y'">{{ item.datetime1 | timeUse }} นาที</span>
-                <span class="text-secondary" *ngIf="item.status=='N'">{{ item.datetime1 | timeUse: item.datetime2 }}
-                    นาที</span>
+                <span class="text-danger" *ngIf="item.status=='Y'">
+                    <div class="text-right">{{ item.datetime1 | timeUse }} นาที</div>
+                    <div class="text-right">{{ item.datetime1 | timeUse | priceUse : item.rate_over : item.rate_price }}
+                        บาท</div>
+                </span>
+                <span class="text-secondary" *ngIf="item.status=='N'">
+                    <div class="text-right">{{ item.datetime1 | timeUse: item.datetime2 }} นาที</div>
+                    <div class="text-right">{{ item.price }} บาท</div>
+                </span>
             </ion-note>
         </ion-item>
     </ion-list>
