--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -31,7 +31,7 @@
             <ion-input type="password" [(ngModel)]="user.password"></ion-input>
         </ion-item>
     </ion-list>
-    <button ion-button full color="dark" icon-start (click)="register()">
-        <ion-icon name="add"></ion-icon> ลงทะเบียน
+    <button ion-button full color="dark" icon-end (click)="next()">
+        ถัดไป <ion-icon name="arrow-round-forward"></ion-icon>
     </button>
 </ion-content>
