--- a/src/pages/price/price.html
+++ b/src/pages/price/price.html
@@ -1,6 +1,11 @@
 <ion-header>
     <ion-navbar color="info">
         <ion-title>รายละเอียดการชำระเงิน</ion-title>
+        <ion-buttons end>
+            <button ion-button icon-only color="royal" (click)="load(true)">
+                <ion-icon name="sync"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 <ion-content padding>
