--- a/src/pages/parking/parking.html
+++ b/src/pages/parking/parking.html
@@ -1,8 +1,11 @@
 <ion-header>
     <ion-navbar color="info">
-        <ion-title>
-            {{ floor.floor_name }}
-        </ion-title>
+        <ion-title>{{ floor.floor_name }}</ion-title>
+        <ion-buttons end>
+            <button ion-button icon-only color="royal" (click)="load(true)">
+                <ion-icon name="sync"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 <ion-content padding>
